generate new endpoint on swagger
